--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     
     <section id="contact" class="mt-5">
       <h2>Contact Us</h2>
-      <h4>Please contact us by email to request a sitting or with any questions: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a>.  If requesting services, please include dates, times, and info on your children along with your name and phone number.  Someone should respond within 24 hours by email or phone.</h4>
+      <h4>Please contact us by email to request a sitting or with any questions: <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a>.  If requesting services, please include dates, times, and info on your children along with your name and phone number.  Someone should respond within 24 hours by email or phone.</h4>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
+    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a> </p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
