--- a/andersen.html
+++ b/andersen.html
@@ -26,6 +26,6 @@
   </div>
 </body>
     <footer>
-    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
+    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a> </p>
   </footer>
 </html>
