--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     </section>
   </main>
 
+    <section id="from_the_parents" class="mt-5">
+      <h2>        <div class="col-md-3"><a href="from_the_parents.html" class="btn btn-primary btn-lg btn-success">Eloise</a></div></h2>  
+    </section>
+
   <footer>
     <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a> </p>
   </footer>
