--- a/from_the_parents.html
+++ b/from_the_parents.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Baby Sitters Club</title>
+  <title>EP Sitters - Babysitting Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .hero {
@@ -25,17 +25,10 @@
 </head>
 <body>
 
-  <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">The Little Sitters Club</a>
-    </div>
-  </nav>
-
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h1 class="display-5 fw-bold">Where Big Hearts and Helping Hands Come Together</h1>
+      <h1 class="display-5 fw-bold">Park Ridge, Niles & Edison Park Babysitting Club</h1>
       <p class="lead">A babysitting club founded by 12-year-old girls, backed by their families for safety and support.</p>
     </div>
   </section>
@@ -43,7 +36,7 @@
   <!-- About the Club -->
   <section class="container my-5">
     <h2 class="section-title text-center">About the Club</h2>
-    <p>The Little Sitters Club is a babysitting service run by a group of responsible, kind-hearted 12-year-old girls who love caring for children. While this club is their idea and they are the primary operators, their parents play a key role in making sure every experience is smooth, safe, and enjoyable for both the children and their families.</p>
+    <p>The Baby Sitters Club is a babysitting service run by a group of responsible, kind-hearted 12-year-old girls who love caring for children. While this club is their idea and they are the primary operators, their parents play a key role in making sure every experience is smooth, safe, and enjoyable for both the children and their families.</p>
   </section>
 
   <!-- Parental Involvement -->
@@ -64,7 +57,7 @@
       </div>
       <div class="col-md-6 mb-3">
         <h5>📚 Guided Training</h5>
-        <p>Our girls are learning child care basics from their parents—including first aid, communication skills, and how to handle real-life babysitting scenarios responsibly.</p>
+        <p>Our girls are learning child care basics from their parents and training courses—including first aid, communication skills, and how to handle real-life babysitting scenarios responsibly.</p>
       </div>
     </div>
   </section>
@@ -79,7 +72,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 The Little Sitters Club. All rights reserved.</p>
+      <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a> </p>
     </div>
   </footer>
 
