--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   <main class="container">
     <section id="home" class="text-center">
       <h1>Welcome to the Edison Park Baby-Sitters Club!</h1>
-      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are responsible trained & experienced 6th graders.  Have an evening out and leave your children in good hands!</h3>
+      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained, experienced & responsible 6th graders.  Have an evening out and leave your children in good hands!</h3>
       <img src="images/sitters.jpg" style="height:175px;width:auto;" alt="Babysitting Image">
     </section>
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and always put safety first. Contact us to see if one of us will be available to babysit when you need us. Thank you!</h4>
+      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are 'A' students and try our best to accomodate your needs and always put safety first. Contact us to see if one of us will be available to babysit when you need us. Thank you!</h4>
     </section>
 
     <section id="sitters" class="mt-5">
