--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
      </main>
 
   <footer>
-    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a> </p>
+    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a> | <a href="images/flyer.pdf">Flyer</a> </p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
