--- a/from_the_parents.html
+++ b/from_the_parents.html
@@ -23,6 +23,15 @@
     }
   </style>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WR2PEHTKLR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WR2PEHTKLR');
+</script>
 <body>
 
   <!-- Hero Section -->
