--- a/addy.html
+++ b/addy.html
@@ -17,6 +17,15 @@
     a { color: #ff6f61; }
   </style>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WR2PEHTKLR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WR2PEHTKLR');
+</script>
 <body>
   <div class="container mt-5">
     <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
