--- a/eloise.html
+++ b/eloise.html
@@ -28,7 +28,7 @@
 </script>
 <body>
   <div class="container mt-5">
-    <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
+    <img src="images/eloise.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Eloise S.</h1>
     <h4>I am 12 years old and I love to help out with kids. I have been babysitting for 2 years and I have lots of experience. I have 2 younger brothers, (9 and 7), and two younger cousins (2 and 7 months), that I babysit for frequently. I am CPR and Heimlich certified. I can cook lots of food and I love to spend time with younger kids.<br></h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
