--- a/andersen.html
+++ b/andersen.html
@@ -28,7 +28,7 @@
 </script>
 <body>
   <div class="container mt-5">
-    <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
+    <img src="images/andersen.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Andersen B.</h1>
     <h4>I am 12 years old and have been babysitting for 1 year. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.</h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
