--- a/index.html
+++ b/index.html
@@ -71,13 +71,10 @@
     </section>
 
     <section id="rates" class="mt-5">
-      <h2>Cash Rates - Maximums: 4 children / 4 hours</h2>
+      <h2>Hourly Cash Rate - Maximums: 4 children / 4 hours</h2>
       <ul>
         <li>
-          <h4>First hour: $20.</h4>
-        </li>
-        <li>
-          <h4>Additional hours: $15 for the first child and $2 for each additional child.</h4>
+          <h4>$12 for the first child and $3 for each additional child.</h4>
           </li>
       </ul>
       
